--- a/error-service-fallback-dev.yml
+++ b/error-service-fallback-dev.yml
@@ -6,4 +6,4 @@ eureka:
     register-with-eureka: true  # 유레카에 등록할지 여부.
     fetch-registry: true  # 유레카에서 조회할지 여부
     service-url:
-      defaultZone: http://localhost/eureka # 서비스를 등록할 서버 주소를 지정
+      defaultZone: http://localhost:8761/eureka # 서비스를 등록할 서버 주소를 지정
