--- a/order-service-dev.yml
+++ b/order-service-dev.yml
@@ -15,7 +15,7 @@ spring:
 #kafka 설정
 kafka:
   server_endpoint: 127.0.0.1:9092
-  topic_name: my-topic
+  topic_name: my-topic1
   group_id: consumer-1
   
 ---    
